# lib-sokol

./: .gitignore  CMakeLists.txt  README.md
src/: sokol_all.c  sokol_app.c  sokol_args.c  sokol_audio.c  sokol_gfx.c
